--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-  
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
 
   <!-- Nav Bar -->
 
-  <nav class="navbar navbar-expand-lg  fixed-top navbar-dark">
+  <nav class="navbar navbar-expand-lg nav-fill fixed-top navbar-dark">
 
     <a class="navbar-brand" href="">tindog</a>
 
@@ -39,7 +39,7 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
-      <ul class="navbar-nav nav-fill ml-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="#footer">Contact</a>
         </li>
